--- a/GeoQuiz/app/src/main/res/layout-land/activity_main.xml
+++ b/GeoQuiz/app/src/main/res/layout-land/activity_main.xml
@@ -42,4 +42,11 @@
         android:layout_gravity="bottom|right"
         android:src="@mipmap/arrow_right"/>
 
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="@string/cheat_button"/>
+
 </FrameLayout>
