GeoQuiz: add output level API of device

--- a/GeoQuiz/app/src/main/res/layout/activity_main.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,9 @@
             android:src="@mipmap/arrow_right"/>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/level_API_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
