--- a/Moon/app/src/main/res/layout/fragment_hello_moon.xml
+++ b/Moon/app/src/main/res/layout/fragment_hello_moon.xml
@@ -22,10 +22,18 @@
             android:text="@string/hellomoon_play"/>
 
         <Button
+            android:id="@+id/hellomoon_pauseButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/hellomoon_pause"/>
+
+        <Button
             android:id="@+id/hellomoon_stopButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/hellomoon_stop"/>
+
+
 
     </TableRow>
 
