connect to contacs

--- a/Crime/app/src/main/res/layout/fragment_crime.xml
+++ b/Crime/app/src/main/res/layout/fragment_crime.xml
@@ -83,4 +83,28 @@
         android:layout_marginRight="16dp"
         android:text="@string/crime_solved_label"/>
 
+    <Button
+        android:id="@+id/crime_suspectButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/crime_suspect_text"/>
+
+    <Button
+        android:id="@+id/coll_suspectButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/coll_solved_text"
+        android:enabled="false"/>
+
+    <Button
+        android:id="@+id/crime_reportButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/crime_report_text"/>
 </LinearLayout>
